--- a/css/estiloPais.css
+++ b/css/estiloPais.css
@@ -40,7 +40,8 @@ article {
     overflow: hidden;
     background-color: #cccccc;
     background-repeat:repeat-y;
-    background-size: 23%;/*no-repeat;*/
+    background-size: 23%;
+    background-repeat:no-repeat;
     /*background-size:300px 180px;*/
 }
 
